--- a/features/features-wordlist-impl/src/main/res/layout/word_list_activity.xml
+++ b/features/features-wordlist-impl/src/main/res/layout/word_list_activity.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:orientation="vertical">
+  android:layout_height="match_parent">
 
-  <TextView
-    android:text="asdsad"
+  <com.google.android.material.bottomappbar.BottomAppBar
+    android:id="@+id/bottomBar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:theme="@style/Widget.MaterialComponents.BottomAppBar"
+    android:layout_gravity="bottom"
+    app:backgroundTint="#3F51B5"
+    app:hideOnScroll="true"
+    app:fabAlignmentMode="center"
+    app:navigationIcon="@drawable/ic_hamburger" />
+
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:id="@+id/fabAdd"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:theme="@style/Widget.MaterialComponents.FloatingActionButton"
+    android:src="@drawable/ic_add"
+    android:tint="@android:color/white"
+    app:layout_anchor="@+id/bottomBar"/>
 
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
