--- a/features/features-wordlist-impl/src/main/res/layout/word_list_activity.xml
+++ b/features/features-wordlist-impl/src/main/res/layout/word_list_activity.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="match_parent"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:fitsSystemWindows="true">
 
   <com.google.android.material.bottomappbar.BottomAppBar
     android:id="@+id/bottomBar"
@@ -24,5 +25,14 @@
     android:src="@drawable/ic_add"
     android:tint="@android:color/white"
     app:layout_anchor="@+id/bottomBar"/>
+
+  <androidx.recyclerview.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clipToPadding="false"
+    tools:listitem="@layout/word_list_item">
+
+  </androidx.recyclerview.widget.RecyclerView>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
