--- a/features/features-wordlist-impl/src/main/res/layout/word_list_activity.xml
+++ b/features/features-wordlist-impl/src/main/res/layout/word_list_activity.xml
@@ -27,6 +27,7 @@
     app:layout_anchor="@+id/bottomBar"/>
 
   <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/rvList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
