--- a/core/core-utils/src/main/res/values-v19/styles.xml
+++ b/core/core-utils/src/main/res/values-v19/styles.xml
@@ -3,5 +3,6 @@
   <style name="AppTheme.WhiteStatusBar" parent="AppTheme" >
     <item name="android:windowBackground">@color/appBackground</item>
     <item name="android:windowTranslucentStatus">true</item>
+    <item name="android:windowTranslucentNavigation">true</item>
   </style>
 </resources>
