--- a/core/core-utils/src/main/res/values-v23/styles.xml
+++ b/core/core-utils/src/main/res/values-v23/styles.xml
@@ -4,5 +4,6 @@
     <item name="android:windowBackground">@color/appBackground</item>
     <item name="android:statusBarColor">@android:color/white</item>
     <item name="android:windowLightStatusBar">true</item>
+    <item name="android:windowTranslucentNavigation">true</item>
   </style>
 </resources>
