--- a/features/features-categories-impl/src/main/res/layout/category_item.xml
+++ b/features/features-categories-impl/src/main/res/layout/category_item.xml
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-  xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-  android:layout_height="match_parent">
+<com.google.android.material.card.MaterialCardView
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:layout_gravity="center"
+  android:layout_marginTop="16dp"
+  android:layout_marginBottom="16dp"
+  android:layout_marginLeft="8dp"
+  android:layout_marginRight="8dp"
+  android:padding="16dp"
+  app:cardBackgroundColor="@color/colorPrimaryLight"
+  app:cardCornerRadius="8dp"
+  app:cardElevation="2dp"
+  app:cardPreventCornerOverlap="true"
+  app:cardUseCompatPadding="true"
+  >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+  <TextView
+    android:id="@+id/tvCategoryTitle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:textColor="@android:color/darker_gray"
+    android:textStyle="bold"
+    android:textSize="20sp"
+    tools:text="Original"
+    />
+
+</com.google.android.material.card.MaterialCardView>
