--- a/features/features-categories-impl/src/main/res/layout/category_list.xml
+++ b/features/features-categories-impl/src/main/res/layout/category_list.xml
@@ -1,38 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:fitsSystemWindows="true"
+  >
+
+  <com.google.android.material.bottomappbar.BottomAppBar
+    android:id="@+id/bottomBar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
+    android:theme="@style/Widget.MaterialComponents.BottomAppBar"
+    app:backgroundTint="@color/colorPrimary"
+    app:fabCradleRoundedCornerRadius="50dp"
+    app:fabAlignmentMode="center"
+    app:hideOnScroll="true"
+    app:navigationIcon="@drawable/ic_hamburger"
+    />
+
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:id="@+id/fabAdd"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:src="@drawable/ic_add"
+    android:theme="@style/Widget.MaterialComponents.FloatingActionButton"
+    android:tint="@android:color/white"
+    app:layout_anchor="@+id/bottomBar"
+    />
+
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/rvList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true">
+    android:clipToPadding="false"
+    tools:listitem="@layout/category_item"
+    >
 
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Widget.MaterialComponents.BottomAppBar"
-        android:layout_gravity="bottom"
-        app:backgroundTint="@color/colorPrimary"
-        app:hideOnScroll="true"
-        app:fabAlignmentMode="center"
-        app:navigationIcon="@drawable/ic_hamburger" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:theme="@style/Widget.MaterialComponents.FloatingActionButton"
-        android:src="@drawable/ic_add"
-        android:tint="@android:color/white"
-        app:layout_anchor="@+id/bottomBar"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        tools:listitem="@layout/category_item">
-
-    </androidx.recyclerview.widget.RecyclerView>
+  </androidx.recyclerview.widget.RecyclerView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
