--- a/core/core-ui/src/main/res/values-v19/styles.xml
+++ b/core/core-ui/src/main/res/values-v19/styles.xml
@@ -2,8 +2,6 @@
 <resources>
   <style name="AppTheme.WhiteStatusBar" parent="AppTheme" >
     <item name="android:windowBackground">@color/appBackground</item>
-    <item name="android:statusBarColor">@android:color/white</item>
-    <item name="android:windowLightStatusBar">true</item>
-    <item name="android:windowTranslucentNavigation">true</item>
+    <item name="android:windowTranslucentStatus">true</item>
   </style>
 </resources>
