--- a/features/features-categories-impl/src/main/res/layout/category_list.xml
+++ b/features/features-categories-impl/src/main/res/layout/category_list.xml
@@ -29,6 +29,7 @@
     android:theme="@style/Widget.MaterialComponents.FloatingActionButton"
     android:tint="@android:color/white"
     app:layout_anchor="@+id/bottomBar"
+    app:layout_behavior="ru.alexeypan.wordcards.utils.ui.fab.ScrollToHideFabBehaviour"
     />
 
   <androidx.recyclerview.widget.RecyclerView
