--- a/features/features-wordlist-impl/src/main/res/layout/word_list_activity.xml
+++ b/features/features-wordlist-impl/src/main/res/layout/word_list_activity.xml
@@ -4,6 +4,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:fitsSystemWindows="true"
   >
 
@@ -14,5 +15,17 @@
     android:clipToPadding="false"
     tools:listitem="@layout/word_list_item"
     />
+
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:id="@+id/fabAdd"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:src="@drawable/ic_add"
+    android:theme="@style/Widget.MaterialComponents.FloatingActionButton"
+    android:tint="@android:color/white"
+    app:layout_anchor="@+id/rvList"
+    app:layout_anchorGravity="bottom|right"
+    />
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
