--- a/core/core-ui/src/main/res/values/styles.xml
+++ b/core/core-ui/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
 
   <style name="AppTheme.WhiteStatusBar" parent="AppTheme" >
     <item name="android:windowBackground">@color/appBackground</item>
+    <item name="android:fitsSystemWindows">true</item>
   </style>
 
 </resources>
