--- a/core/core-ui/src/main/res/values-v27/styles.xml
+++ b/core/core-ui/src/main/res/values-v27/styles.xml
@@ -5,6 +5,7 @@
     <item name="android:statusBarColor">@android:color/transparent</item>
     <item name="android:fitsSystemWindows">true</item>
     <item name="android:windowLightStatusBar">true</item>
-    <item name="android:navigationBarColor">@color/colorPrimary</item>
+    <item name="android:windowLightNavigationBar">true</item>
+    <item name="android:navigationBarColor">@color/appBackground</item>
   </style>
 </resources>
