--- a/core/core-ui/src/main/res/values/colors.xml
+++ b/core/core-ui/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
   <color name="colorPrimary">#9E9E9E</color>
   <color name="colorPrimaryDark">#616161</color>
-  <color name="colorPrimaryLight">#F5F5F5</color>
-  <color name="colorAccent">#536DFE</color>
+  <color name="colorPrimaryLight">#EEEEEE</color>
+  <color name="colorAccent">#2962FF</color>
   <color name="colorPrimaryText">#212121</color>
   <color name="colorSecondary">#757575</color>
   <color name="colorDivider">#BDBDBD</color>
