--- a/features/wordlist-impl/src/main/res/layout/word_list_item.xml
+++ b/features/wordlist-impl/src/main/res/layout/word_list_item.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/cardWord"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:layout_gravity="center"
   android:layout_marginLeft="8dp"
   android:layout_marginTop="32dp"
   android:layout_marginRight="8dp"
-  android:layout_marginBottom="64dp"
-  app:cardBackgroundColor="@color/colorPrimaryLight"
-  app:cardCornerRadius="4dp"
-  app:cardElevation="2dp"
-  app:cardPreventCornerOverlap="true"
-  app:cardUseCompatPadding="true">
+  android:layout_marginBottom="64dp">
 
-  <TextView
-    android:id="@+id/tvWord"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+  <com.google.android.material.card.MaterialCardView
+    android:id="@+id/cardWord"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:textColor="@android:color/holo_red_dark"
-    android:textSize="24sp"
-    tools:text="Original" />
+    app:cardBackgroundColor="@color/colorPrimaryLight"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="2dp"
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="true">
 
-</com.google.android.material.card.MaterialCardView>
+    <TextView
+      android:id="@+id/tvWord"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center"
+      android:textColor="@android:color/holo_red_dark"
+      android:textSize="24sp"
+      tools:text="Original" />
+
+  </com.google.android.material.card.MaterialCardView>
+
+</FrameLayout>
