--- a/features/categories-impl/src/main/res/layout/category_list.xml
+++ b/features/categories-impl/src/main/res/layout/category_list.xml
@@ -38,7 +38,7 @@
     android:theme="@style/Widget.MaterialComponents.FloatingActionButton"
     android:tint="@android:color/white"
     app:layout_anchor="@+id/bottomBar"
-    app:layout_behavior="ru.alexeypan.wordcards.utils.ui.fab.ScrollToHideFabBehaviour"
+    app:layout_behavior="ru.alexeypan.wordcards.core.ui.fab.ScrollToHideFabBehaviour"
     />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
