--- a/features/categories-impl/src/main/res/layout/category_item.xml
+++ b/features/categories-impl/src/main/res/layout/category_item.xml
@@ -1,32 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="wrap_content"
+  android:layout_height="120dp"
   android:layout_gravity="center"
-  android:layout_marginTop="16dp"
-  android:layout_marginBottom="16dp"
-  android:layout_marginLeft="8dp"
-  android:layout_marginRight="8dp"
-  android:padding="16dp"
+  android:layout_marginLeft="4dp"
+  android:layout_marginRight="4dp"
+  android:layout_marginBottom="8dp"
   app:cardBackgroundColor="@color/colorPrimaryLight"
   app:cardCornerRadius="8dp"
   app:cardElevation="2dp"
   app:cardPreventCornerOverlap="true"
-  app:cardUseCompatPadding="true"
-  >
+  app:cardUseCompatPadding="true">
 
   <TextView
     android:id="@+id/tvCategoryTitle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:gravity="center"
+    android:fontFamily="sans-serif-medium"
     android:textColor="@android:color/darker_gray"
-    android:textStyle="bold"
-    android:textSize="20sp"
-    tools:text="Original"
-    />
+    android:padding="4dp"
+    android:textSize="14sp"
+    tools:text="Original" />
+
+  <LinearLayout
+    android:layout_gravity="top|right"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+    <ImageView
+      android:id="@+id/ivEdit"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginRight="8dp"
+      android:src="@drawable/ic_edit"/>
+
+    <ImageView
+      android:id="@+id/ivDelete"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:src="@drawable/ic_delete"/>
+  </LinearLayout>
+
 
 </com.google.android.material.card.MaterialCardView>
