--- a/features/categories-impl/src/main/res/layout/category_item.xml
+++ b/features/categories-impl/src/main/res/layout/category_item.xml
@@ -26,24 +26,11 @@
     android:textSize="14sp"
     tools:text="Original" />
 
-  <LinearLayout
-    android:layout_gravity="top|right"
+  <ImageView
+    android:id="@+id/ivMore"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
-    <ImageView
-      android:id="@+id/ivEdit"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginRight="8dp"
-      android:src="@drawable/ic_edit"/>
-
-    <ImageView
-      android:id="@+id/ivDelete"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:src="@drawable/ic_delete"/>
-  </LinearLayout>
-
+    android:layout_height="wrap_content"
+    android:layout_gravity="top|right"
+    android:src="@drawable/ic_more_vert"/>
 
 </com.google.android.material.card.MaterialCardView>
