--- a/features/categories-impl/src/main/res/layout/category_item.xml
+++ b/features/categories-impl/src/main/res/layout/category_item.xml
@@ -2,6 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/cvCategory"
   android:layout_width="match_parent"
   android:layout_height="120dp"
   android:layout_gravity="center"
@@ -19,10 +20,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:gravity="center"
     android:fontFamily="sans-serif-medium"
-    android:textColor="@android:color/darker_gray"
+    android:gravity="center"
     android:padding="4dp"
+    android:textColor="@android:color/darker_gray"
     android:textSize="14sp"
     tools:text="Original" />
 
@@ -31,6 +32,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="top|right"
-    android:src="@drawable/ic_more_vert"/>
+    android:src="@drawable/ic_more_vert" />
 
 </com.google.android.material.card.MaterialCardView>
