--- a/features/categories/src/main/res/layout/categories_add_dialog.xml
+++ b/features/categories/src/main/res/layout/categories_add_dialog.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:background="@drawable/round_dialog"
+  android:background="@drawable/categories_round_dialog"
   android:paddingTop="32dp"
   android:paddingRight="24dp"
   android:paddingBottom="32dp">
@@ -16,7 +16,7 @@
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="24dp"
     android:background="?selectableItemBackgroundBorderless"
-    android:src="@drawable/ic_close" />
+    android:src="@drawable/categories_ic_close" />
 
   <TextView
     android:id="@+id/tvTitle"
