--- a/features/categories/src/main/res/layout/categories_item.xml
+++ b/features/categories/src/main/res/layout/categories_item.xml
@@ -32,6 +32,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="top|right"
-    android:src="@drawable/ic_more_vert" />
+    android:src="@drawable/categories_ic_more_vert" />
 
 </com.google.android.material.card.MaterialCardView>
