--- a/features/categories/src/main/res/layout/categories_list.xml
+++ b/features/categories/src/main/res/layout/categories_list.xml
@@ -15,8 +15,8 @@
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:clipToPadding="false"
-    android:layoutAnimation="@anim/layout_animation_show_from_bottom"
-    tools:listitem="@layout/category_item"
+    android:layoutAnimation="@anim/categories_layout_animation_show_from_bottom"
+    tools:listitem="@layout/categories_item"
     />
 
   <com.google.android.material.bottomappbar.BottomAppBar
@@ -28,15 +28,14 @@
     app:backgroundTint="@color/colorPrimary"
     app:fabAlignmentMode="center"
     app:hideOnScroll="true"
-    app:fabCradleRoundedCornerRadius="100dp"
-    app:navigationIcon="@drawable/ic_hamburger"
+    app:navigationIcon="@drawable/categories_ic_hamburger"
     />
 
   <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/fabAdd"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:src="@drawable/ic_add"
+    android:src="@drawable/categories_ic_add"
     android:theme="@style/Widget.MaterialComponents.FloatingActionButton"
     android:tint="@android:color/white"
     app:layout_anchor="@+id/bottomBar"
